---------------------------------------------------------------------------
Version 5.7.1  [V5-DEVEL] (rgerhards), 2010-09-??
- imuxsock now optionally use SCM_CREDENTIALS to pull the pid from the log
  socket itself (thanks to Lennart Poettering for the suggestion)
- added new config statements
  * $InputUnixListenSocketUsePIDFromSystem 
  * $SystemLogUsePIDFromSystem 
---------------------------------------------------------------------------
Version 5.7.0  [V5-DEVEL] (rgerhards), 2010-09-16
- added module impstat to emit periodic statistics on rsyslog counters
- support for systemd officially added
  * acquire /dev/log socket optionally from systemd
    thanks to Lennart Poettering for this patch
  * sd-systemd API added as part of rsyslog runtime library
---------------------------------------------------------------------------
Version 5.5.7  [V5-BETA] (rgerhards), 2010-08-09
- changed omudpspoof default spoof address to simplify typical use case
  thanks to David Lang for suggesting this
- doc bugfix: pmlastmsg doc samples had errors
- bugfix[minor]: pmrfc3164sd had invalid name (resided in rsyslog name 
  space, what should not be the case for a contributed module)
- added omuxsock, which permits to write message to local Unix sockets
  this is the counterpart to imuxsock, enabling fast local forwarding
---------------------------------------------------------------------------
Version 5.5.6  [DEVEL] (rgerhards), 2010-07-21
- added parser modules
  * pmlastmsg, which supports the notoriously malformed "last message
    repeated n times" messages from some syslogd's (namely sysklogd)
  * pmrfc3164sd (contributed), supports RFC5424 structured data in 
    RFC3164 messages [untested]
- added new module type "string generator", used to speed up output
  processing. Expected speedup for (typical) rsyslog processing is
  roughly 5 to 6 percent compared to using string-based templates.
  They may also be used to do more complex formatting with custom